// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`PromptBreadcrumb rendering test variant edit - root defined - test 1`] = `
<div>
  <nav
    aria-label="breadcrumb"
    data-slot="breadcrumb"
    data-testid="template-breadcrumb"
  >
    <ol
      class="flex flex-wrap items-center gap-1.5 text-sm break-words text-muted-foreground sm:gap-2.5"
      data-slot="breadcrumb-list"
    >
      <li
        class="inline-flex items-center gap-1.5"
        data-slot="breadcrumb-item"
      >
        <a
          class="transition-colors hover:text-foreground"
          data-slot="breadcrumb-link"
          data-testid="root-link"
          href="/root/3"
        >
          Root Label 3
        </a>
      </li>
      <li
        aria-hidden="true"
        class="[&>svg]:size-3.5"
        data-slot="breadcrumb-separator"
        role="presentation"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-right"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m9 18 6-6-6-6"
          />
        </svg>
      </li>
      <li
        class="inline-flex items-center gap-1.5"
        data-slot="breadcrumb-item"
      >
        <a
          class="transition-colors hover:text-foreground max-w-40 truncate"
          data-slot="breadcrumb-link"
          data-testid="item-link"
          href="/templates/334db648-f300-4284-8149-075ff465d751"
          title="title 1"
        >
          title 1
        </a>
      </li>
    </ol>
  </nav>
</div>
`;

exports[`PromptBreadcrumb rendering test variant edit - root undefined - test 1`] = `
<div>
  <nav
    aria-label="breadcrumb"
    data-slot="breadcrumb"
    data-testid="template-breadcrumb"
  >
    <ol
      class="flex flex-wrap items-center gap-1.5 text-sm break-words text-muted-foreground sm:gap-2.5"
      data-slot="breadcrumb-list"
    >
      <li
        class="inline-flex items-center gap-1.5"
        data-slot="breadcrumb-item"
      >
        <a
          class="transition-colors hover:text-foreground"
          data-slot="breadcrumb-link"
          data-testid="root-link"
          href="/templates"
        >
          Prompts
        </a>
      </li>
      <li
        aria-hidden="true"
        class="[&>svg]:size-3.5"
        data-slot="breadcrumb-separator"
        role="presentation"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-right"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m9 18 6-6-6-6"
          />
        </svg>
      </li>
      <li
        class="inline-flex items-center gap-1.5"
        data-slot="breadcrumb-item"
      >
        <a
          class="transition-colors hover:text-foreground max-w-40 truncate"
          data-slot="breadcrumb-link"
          data-testid="item-link"
          href="/templates/334db648-f300-4284-8149-075ff465d751"
          title="title 1"
        >
          title 1
        </a>
      </li>
    </ol>
  </nav>
</div>
`;

exports[`PromptBreadcrumb rendering test variant new - root defined - test 1`] = `
<div>
  <nav
    aria-label="breadcrumb"
    data-slot="breadcrumb"
    data-testid="template-breadcrumb"
  >
    <ol
      class="flex flex-wrap items-center gap-1.5 text-sm break-words text-muted-foreground sm:gap-2.5"
      data-slot="breadcrumb-list"
    >
      <li
        class="inline-flex items-center gap-1.5"
        data-slot="breadcrumb-item"
      >
        <a
          class="transition-colors hover:text-foreground"
          data-slot="breadcrumb-link"
          data-testid="root-link"
          href="/root/1"
        >
          Root Label 1
        </a>
      </li>
      <li
        aria-hidden="true"
        class="[&>svg]:size-3.5"
        data-slot="breadcrumb-separator"
        role="presentation"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-right"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m9 18 6-6-6-6"
          />
        </svg>
      </li>
      <li
        class="inline-flex items-center gap-1.5"
        data-slot="breadcrumb-item"
      >
        <span
          aria-current="page"
          aria-disabled="true"
          class="font-normal text-foreground"
          data-slot="breadcrumb-page"
          role="link"
        >
          Neuer Prompt
        </span>
      </li>
    </ol>
  </nav>
</div>
`;

exports[`PromptBreadcrumb rendering test variant new - root undefined - test 1`] = `
<div>
  <nav
    aria-label="breadcrumb"
    data-slot="breadcrumb"
    data-testid="template-breadcrumb"
  >
    <ol
      class="flex flex-wrap items-center gap-1.5 text-sm break-words text-muted-foreground sm:gap-2.5"
      data-slot="breadcrumb-list"
    >
      <li
        class="inline-flex items-center gap-1.5"
        data-slot="breadcrumb-item"
      >
        <a
          class="transition-colors hover:text-foreground"
          data-slot="breadcrumb-link"
          data-testid="root-link"
          href="/templates"
        >
          Prompts
        </a>
      </li>
      <li
        aria-hidden="true"
        class="[&>svg]:size-3.5"
        data-slot="breadcrumb-separator"
        role="presentation"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-right"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m9 18 6-6-6-6"
          />
        </svg>
      </li>
      <li
        class="inline-flex items-center gap-1.5"
        data-slot="breadcrumb-item"
      >
        <span
          aria-current="page"
          aria-disabled="true"
          class="font-normal text-foreground"
          data-slot="breadcrumb-page"
          role="link"
        >
          Neuer Prompt
        </span>
      </li>
    </ol>
  </nav>
</div>
`;

exports[`PromptBreadcrumb rendering test variant view - root defined - test 1`] = `
<div>
  <nav
    aria-label="breadcrumb"
    data-slot="breadcrumb"
    data-testid="template-breadcrumb"
  >
    <ol
      class="flex flex-wrap items-center gap-1.5 text-sm break-words text-muted-foreground sm:gap-2.5"
      data-slot="breadcrumb-list"
    >
      <li
        class="inline-flex items-center gap-1.5"
        data-slot="breadcrumb-item"
      >
        <a
          class="transition-colors hover:text-foreground"
          data-slot="breadcrumb-link"
          data-testid="root-link"
          href="/root/2"
        >
          Root Label 2
        </a>
      </li>
      <li
        aria-hidden="true"
        class="[&>svg]:size-3.5"
        data-slot="breadcrumb-separator"
        role="presentation"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-right"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m9 18 6-6-6-6"
          />
        </svg>
      </li>
      <li
        class="inline-flex items-center gap-1.5"
        data-slot="breadcrumb-item"
      >
        <span
          aria-current="page"
          aria-disabled="true"
          class="font-normal text-foreground max-w-40 truncate"
          data-slot="breadcrumb-page"
          role="link"
          title="Template 1"
        >
          Template 1
        </span>
      </li>
    </ol>
  </nav>
</div>
`;

exports[`PromptBreadcrumb rendering test variant view - root undefined - test 1`] = `
<div>
  <nav
    aria-label="breadcrumb"
    data-slot="breadcrumb"
    data-testid="template-breadcrumb"
  >
    <ol
      class="flex flex-wrap items-center gap-1.5 text-sm break-words text-muted-foreground sm:gap-2.5"
      data-slot="breadcrumb-list"
    >
      <li
        class="inline-flex items-center gap-1.5"
        data-slot="breadcrumb-item"
      >
        <a
          class="transition-colors hover:text-foreground"
          data-slot="breadcrumb-link"
          data-testid="root-link"
          href="/templates"
        >
          Prompts
        </a>
      </li>
      <li
        aria-hidden="true"
        class="[&>svg]:size-3.5"
        data-slot="breadcrumb-separator"
        role="presentation"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-right"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m9 18 6-6-6-6"
          />
        </svg>
      </li>
      <li
        class="inline-flex items-center gap-1.5"
        data-slot="breadcrumb-item"
      >
        <span
          aria-current="page"
          aria-disabled="true"
          class="font-normal text-foreground max-w-40 truncate"
          data-slot="breadcrumb-page"
          role="link"
          title="Template 1"
        >
          Template 1
        </span>
      </li>
    </ol>
  </nav>
</div>
`;
